_includes/manuals/1.3/3.2.1_installation.md

[The Foreman installer](https://github.com/theforeman/foreman-installer) uses Puppet to install Foreman. This guide assumes that you have a newly installed operating system, on which the installer will setup Foreman, a puppet master with Passenger and the [Smart Proxy](/manuals/{{page.version}}/index.html#4.3SmartProxies) by default.

#### Downloading the installer

For **Red Hat variants**, run this (replace 'el6' with 'f18' or 'f19' as appropriate):

{% highlight bash %}
yum -y install http://yum.theforeman.org/releases/1.3/el6/x86_64/foreman-release.rpm
yum -y install foreman-installer
{% endhighlight %}

For **Debian variants**, run this (replace 'wheezy' with 'precise' if on Ubuntu 12.04, or 'squeeze' for Debian 6):

{% highlight bash %}
echo "deb http://deb.theforeman.org/ wheezy 1.3" > /etc/apt/sources.list.d/foreman.list
wget -q http://deb.theforeman.org/foreman.asc -O- | apt-key add -
apt-get update && apt-get install foreman-installer
{% endhighlight %}

#### Running the installer

The installation run is non-interactive, but the configuration can be customized by supplying any of the options listed in `foreman-installer --help`, or by running `foreman-installer -i` for interactive mode.  More examples are given in the [Installation Options](/manuals/1.3/index.html#3.2.2InstallerOptions) section.  Adding `-v` will disable the progress bar and display all changes, while `--noop` will run without making any changes.  To run the installer, execute:

{% highlight bash %}
foreman-installer
{% endhighlight %}

After it completes, Foreman will be accessible at `https://fqdn/` with a default username/password of "admin" and "changeme".  Logs of the installation are stored under `/var/log/foreman-installer`.
