_includes/manuals/1.6/3.2.1_installation.md

[The Foreman installer](https://github.com/theforeman/foreman-installer) uses Puppet to install Foreman. This guide assumes that you have a newly installed operating system, on which the installer will setup Foreman, a puppet master with Passenger and the [Smart Proxy](/manuals/{{page.version}}/index.html#4.3SmartProxies) by default.

#### Downloading the installer

For **Red Hat variants**, run this (replace 'el6' with 'el7' if on RHEL 7, or 'f19' on Fedora 19):

{% highlight bash %}
yum -y install http://yum.theforeman.org/releases/{{page.version}}/el6/x86_64/foreman-release.rpm
yum -y install foreman-installer
{% endhighlight %}

For **Debian variants**, run this (replace 'wheezy' with 'trusty' if on Ubuntu 14.04, 'precise' if on Ubuntu 12.04, or 'squeeze' for Debian 6):

{% highlight bash %}
echo "deb http://deb.theforeman.org/ wheezy {{page.version}}" > /etc/apt/sources.list.d/foreman.list
echo "deb http://deb.theforeman.org/ plugins {{page.version}}" >> /etc/apt/sources.list.d/foreman.list
wget -q http://deb.theforeman.org/pubkey.gpg -O- | apt-key add -
apt-get update && apt-get install foreman-installer
{% endhighlight %}

#### Running the installer

The installation run is non-interactive, but the configuration can be customized by supplying any of the options listed in `foreman-installer --help`, or by running `foreman-installer -i` for interactive mode.  More examples are given in the [Installation Options](/manuals/{{page.version}}/index.html#3.2.2InstallerOptions) section.  Adding `-v` will disable the progress bar and display all changes, while `--noop` will run without making any changes.  To run the installer, execute:

{% highlight bash %}
foreman-installer
{% endhighlight %}

After it completes, the installer will print some details about where to find Foreman and the Smart Proxy and Puppet master if they were installed along Foreman. Output should be similar to this:

{% highlight bash %}
  * Foreman is running at https://theforeman.example.com
      Initial credentials are admin / 3ekw5xtyXCoXxS29
  * Foreman Proxy is running at https://theforeman.example.com:8443
  * Puppetmaster is running at port 8140
  * The full log is at /var/log/foreman-installer/foreman-installer.log
{% endhighlight %}
